--- a/lib/hyacinth_web/live/pipeline_live/show.html.heex
+++ b/lib/hyacinth_web/live/pipeline_live/show.html.heex
@@ -17,7 +17,7 @@
           </li>
           <li>
             <span class="text-gray-400">Run:</span>
-            <span><%= transform.input_id != nil %></span>
+            <span><%= transform.output_id != nil %></span>
           </li>
           <%= if transform.input do %>
             <li class="mt-2">
