--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -20,6 +20,10 @@ a:not(.link-btn) {
     @apply px-3 py-1.5 rounded focus:ring-2 ring-offset-2 ring-offset-gray-900 transition;
 }
 
+.btn-xs {
+    @apply px-1 py-0.5 text-xs font-medium;
+}
+
 .btn-lg {
     @apply px-4 py-2;
 }
