--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -9,7 +9,7 @@ h1 {
     @apply text-2xl text-gray-300 font-medium;
 }
 
-a:not(.link-btn) {
+.link {
     @apply text-blue-200 hover:text-blue-300 hover:underline font-medium;
 }
 
@@ -88,6 +88,18 @@ a:not(.link-btn) {
 
 .form-content button[type='submit'] {
     @apply btn btn-blue;
+}
+
+/* Filter/Sort Forms */
+
+.filter-form-content label {
+    @apply text-sm text-gray-400 font-medium;
+}
+
+.filter-form-content select {
+    @apply p-0 pl-1 pr-8;
+    @apply text-gray-300 hover:text-gray-200 font-medium;
+    @apply bg-transparent rounded border-none;
 }
 
 /* This file is for your main application CSS */
