--- a/lib/hyacinth_web/templates/layout/live.html.heex
+++ b/lib/hyacinth_web/templates/layout/live.html.heex
@@ -1,4 +1,4 @@
-<div>
+<div class="mt-6 pb-32 mx-auto max-w-screen-lg">
   <p class="alert alert-info" role="alert"
     phx-click="lv:clear-flash"
     phx-value-key="info"><%= live_flash(@flash, :info) %></p>
