--- a/lib/hyacinth_web/templates/label_job/new.html.heex
+++ b/lib/hyacinth_web/templates/label_job/new.html.heex
@@ -42,6 +42,6 @@
   </.form>
 
   <div class="mt-4">
-    <%= link "Back", to: Routes.label_job_path(@conn, :index) %>
+    <%= link "Back", to: Routes.label_job_path(@conn, :index), class: "link" %>
   </div>
 </main>
