--- a/lib/hyacinth_web/templates/layout/_user_menu.html.heex
+++ b/lib/hyacinth_web/templates/layout/_user_menu.html.heex
@@ -1,10 +1,10 @@
 <ul class="flex items-center space-x-4">
 <%= if @current_user do %>
   <li><%= @current_user.email %></li>
-  <li><%= link "Settings", to: Routes.user_settings_path(@conn, :edit) %></li>
-  <li><%= link "Log out", to: Routes.user_session_path(@conn, :delete), method: :delete %></li>
+  <li><%= link "Settings", to: Routes.user_settings_path(@conn, :edit), class: "link" %></li>
+  <li><%= link "Log out", to: Routes.user_session_path(@conn, :delete), method: :delete, class: "link" %></li>
 <% else %>
-  <li><%= link "Register", to: Routes.user_registration_path(@conn, :new) %></li>
-  <li><%= link "Log in", to: Routes.user_session_path(@conn, :new) %></li>
+  <li><%= link "Register", to: Routes.user_registration_path(@conn, :new), class: "link" %></li>
+  <li><%= link "Log in", to: Routes.user_session_path(@conn, :new), class: "link" %></li>
 <% end %>
 </ul>
