--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -96,6 +96,16 @@ h1 {
     @apply text-sm text-gray-400 font-medium;
 }
 
+.filter-form-content input[type="text"],
+.filter-form-content input[type="number"],
+.filter-form-content input[type="password"] {
+    @apply px-2 py-1;
+    @apply placeholder-gray-500;
+    @apply bg-gray-800 rounded;
+    @apply border-gray-500 hover:border-gray-300 focus:border-blue-500 focus:ring-blue-500;
+}
+
+
 .filter-form-content select {
     @apply p-0 pl-1 pr-8;
     @apply text-gray-300 hover:text-gray-200 font-medium;
