--- a/lib/hyacinth_web/live/dataset_live/show.html.heex
+++ b/lib/hyacinth_web/live/dataset_live/show.html.heex
@@ -1,11 +1,21 @@
 <header>
-  <div>
-    <h1><%= @dataset.name %></h1>
+  <div class="flex items-center space-x-3">
+    <h1 class="text-3xl"><%= @dataset.name %></h1>
+    <div>
+      <%= case @dataset.type do %>
+      <% :root -> %>
+        <div class="inline-block px-3 py-1 text-sm font-medium text-violet-400 bg-violet-400 bg-opacity-20 rounded-full">Root Dataset</div>
+      <% :derived -> %>
+        <div class="inline-block px-3 py-1 text-sm font-medium text-orange-400 bg-orange-400 bg-opacity-20 rounded-full">Derived Dataset</div>
+      <% end %>
+    </div>
   </div>
 
-  <div class="mt-2 p-2 bg-gray-800 border border-gray-700 rounded">
-    <.tab_button cur_tab={@tab} event="set_tab" tab="jobs">Jobs</.tab_button>
-    <.tab_button cur_tab={@tab} event="set_tab" tab="objects">Objects</.tab_button>
+  <div class="mt-4 text-xl border-b-2 border-gray-700">
+    <div class="-mb-0.5">
+      <.tab_button cur_tab={@tab} event="set_tab" tab="jobs">Jobs</.tab_button>
+      <.tab_button cur_tab={@tab} event="set_tab" tab="objects">Objects</.tab_button>
+    </div>
   </div>
 </header>
 
@@ -29,27 +39,31 @@
 
   <% :objects -> %>
     <div>
-      <div class="text-lg font-medium"><%= length(@objects) %> Objects</div>
-      <table class="mt-1 w-full table">
-        <thead>
-          <th>Name</th>
-          <th>Format</th>
-          <th>Hash</th>
-          <th>Type</th>
-          <th>Created</th>
-        </thead>
-        <tbody class="text-gray-400 text-sm">
-          <%= for %Object{} = object <- @objects do %>
+      <div class="ml-1 text-lg text-gray-300"><%= length(@objects) %> objects</div>
+      <div class="mt-2 border border-gray-700 rounded">
+        <table class="mt-1 w-full table">
+          <thead>
             <tr>
-              <td><%= object.name %></td>
-              <td><%= object.file_type %></td>
-              <td class="text-xs"><%= object.hash %></td>
-              <td><%= object.type %></td>
-              <td><%= Calendar.strftime(object.inserted_at, "%c") %></td>
+              <th>Name</th>
+              <th>Format</th>
+              <th>Hash</th>
+              <th>Type</th>
+              <th>Created</th>
             </tr>
-          <% end %>
-        </tbody>
-      </table>
+          </thead>
+          <tbody class="text-gray-400 text-sm">
+            <%= for %Object{} = object <- @objects do %>
+              <tr>
+                <td><%= object.name %></td>
+                <td><%= object.file_type %></td>
+                <td class="text-xs"><%= object.hash %></td>
+                <td><%= object.type %></td>
+                <td><%= Calendar.strftime(object.inserted_at, "%c") %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
     </div>
   <% end %>
 </main>
