--- a/lib/hyacinth_web/live/dataset_live/index.html.heex
+++ b/lib/hyacinth_web/live/dataset_live/index.html.heex
@@ -37,9 +37,9 @@
           <div class="shrink-0">
             <%= case dataset.type do %>
             <% :root -> %>
-              <div class="inline-block px-2 py-0.5 text-xs text-violet-400 bg-violet-400 bg-opacity-20 rounded-full">Root Dataset</div>
+              <div class="pill pill-violet">Root Dataset</div>
             <% :derived -> %>
-              <div class="inline-block px-2 py-0.5 text-xs text-orange-400 bg-orange-400 bg-opacity-20 rounded-full">Derived Dataset</div>
+              <div class="pill pill-orange">Derived Dataset</div>
             <% end %>
           </div>
         </div>
