--- a/lib/hyacinth_web/live/dataset_live/show.html.heex
+++ b/lib/hyacinth_web/live/dataset_live/show.html.heex
@@ -54,9 +54,9 @@
             <div class="shrink-0">
               <%= case job.label_type do %>
               <% :classification -> %>
-                <div class="inline-block px-2 py-0.5 text-xs text-green-400 bg-green-400 bg-opacity-20 rounded-full">Classification</div>
+                <div class="pill pill-green">Classification</div>
               <% :comparison_exhaustive -> %>
-                <div class="inline-block px-2 py-0.5 text-xs text-blue-400 bg-blue-400 bg-opacity-20 rounded-full">Comparison</div>
+                <div class="pill pill-blue">Comparison</div>
               <% end %>
             </div>
           </div>
